terraform/vpc.tf
# VPC
resource "aws_vpc" "kb_vpc" {
  cidr_block           = "10.0.0.0/16"
  enable_dns_hostnames = true
}
